// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reg tests reg list and longlist 5`] = `
{
  "subscriptions": [
    {
      "amount": 1,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:58 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "5ecc7413-2b7e-414a-9496-ad4a61f6cccf",
      "createdOn": "Fri Mar 19 09:51:40 GMT 2021",
      "dependencies": [
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_5ecc7413-2b7e-414a-9496-ad4a61f6cccf_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "5ecc7413-2b7e-414a-9496-ad4a61f6cccf",
      "subdomain": "skyfin-company",
      "subscriptionGUID": "8999d1fa-3a3e-bbf5-c21d-2db950822b8a",
      "url": "https://skyfin-company.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 1,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:58 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "6917dfd6-7590-4033-af2a-140b75263b0d",
      "createdOn": "Thu Apr 28 07:57:29 GMT 2022",
      "dependencies": [
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_6917dfd6-7590-4033-af2a-140b75263b0d_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "6917dfd6-7590-4033-af2a-140b75263b0d",
      "subdomain": "skyfin-debug-company",
      "subscriptionGUID": "4c172974-73a6-307b-7150-d4be1da4ff56",
      "url": "https://skyfin-debug-company.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:16:00 GMT 2024",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "cb9158ce-f8fd-441b-b443-17219e8f79fa",
      "createdOn": "Mon Sep 05 12:11:10 GMT 2022",
      "dependencies": [
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_cb9158ce-f8fd-441b-b443-17219e8f79fa_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "b07cc881-e90b-4c18-82c4-94aad87c2bb9",
      "subdomain": "skysand",
      "subscriptionGUID": "76fcb047-85cc-baa4-9705-aa22aebf47f7",
      "url": "https://skysand.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 1,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:16:00 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "848a0f14-792d-4bd2-821c-7c6280780ca3",
      "createdOn": "Tue Aug 08 14:41:19 GMT 2023",
      "dependencies": [
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
      ],
      "globalAccountId": "14834dda-03aa-46e2-9ea7-01492f461a23",
      "internalSubscriptionId": "afc-dev!t5874_848a0f14-792d-4bd2-821c-7c6280780ca3_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "848a0f14-792d-4bd2-821c-7c6280780ca3",
      "subdomain": "saas-starter-eu-10",
      "subscriptionGUID": "6b1a744f-89da-48cb-92d3-a01842d44b13",
      "url": "https://saas-starter-eu-10.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 2,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:55 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "4c0909b1-a84e-4763-a26e-532fdb9e40fa",
      "createdOn": "Tue Sep 05 14:19:13 GMT 2023",
      "dependencies": [
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
      ],
      "globalAccountId": "1fb05c0d-22c0-43d8-9ca7-c9ef0c28f67f",
      "internalSubscriptionId": "afc-dev!t5874_4c0909b1-a84e-4763-a26e-532fdb9e40fa_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "4c0909b1-a84e-4763-a26e-532fdb9e40fa",
      "subdomain": "hw6-apps-eu10",
      "subscriptionGUID": "b6db4043-7b32-4bc5-89cc-b605ac033edd",
      "url": "https://hw6-apps-eu10.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 1,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:16:02 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "288393a7-972c-4fa8-acfd-12299c4db374",
      "createdOn": "Fri Jan 05 07:50:05 GMT 2024",
      "dependencies": [
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
      ],
      "globalAccountId": "096cea2e-77ef-498f-a588-114b33817f5d",
      "internalSubscriptionId": "afc-dev!t5874_288393a7-972c-4fa8-acfd-12299c4db374_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "0b0eda38-2795-445a-a1f7-025e336263c0",
      "subdomain": "nga-dev-eu10-uofvpsx0",
      "subscriptionGUID": "efd308d6-db5a-41fd-8f35-6211d40746a1",
      "url": "https://nga-dev-eu10-uofvpsx0.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 10,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:16:00 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "dde70ec5-983d-4848-b50c-fb2cdac7d359",
      "createdOn": "Fri Feb 23 15:34:25 GMT 2024",
      "dependencies": [
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_dde70ec5-983d-4848-b50c-fb2cdac7d359_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "dde70ec5-983d-4848-b50c-fb2cdac7d359",
      "subdomain": "skyfin-test-3",
      "subscriptionGUID": "3199388d-2f03-4b28-851e-b0e5b1dee31f",
      "url": "https://skyfin-test-3.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 1,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:56 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "cf528063-6a43-4bf2-8ccc-ca4e6d75d88e",
      "createdOn": "Tue Mar 19 16:47:52 GMT 2024",
      "dependencies": [
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
      ],
      "globalAccountId": "a6786cbf-f7e7-4103-9386-b91d1c07e3ea",
      "internalSubscriptionId": "afc-dev!t5874_cf528063-6a43-4bf2-8ccc-ca4e6d75d88e_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "cf528063-6a43-4bf2-8ccc-ca4e6d75d88e",
      "subdomain": "jyd-dev-apps-eu10",
      "subscriptionGUID": "b9659eb7-cf54-4cb4-bab2-6262b48b1a60",
      "url": "https://jyd-dev-apps-eu10.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 10,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:56 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "6ef2372b-d256-4fef-8b01-6eeb18f2eefe",
      "createdOn": "Wed Apr 17 06:17:11 GMT 2024",
      "dependencies": [
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_6ef2372b-d256-4fef-8b01-6eeb18f2eefe_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "6ef2372b-d256-4fef-8b01-6eeb18f2eefe",
      "subdomain": "afc-sap-start-test",
      "subscriptionGUID": "d8dc50d2-4f18-4649-8eb2-d956a1e132cc",
      "url": "https://afc-sap-start-test.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
    {
      "amount": 10,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:59 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "34d6259c-41bc-4f6b-8220-018ace187813",
      "createdOn": "Fri Apr 19 09:58:19 GMT 2024",
      "dependencies": [
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_34d6259c-41bc-4f6b-8220-018ace187813_afc-dev!t5874",
      "state": "SUBSCRIBED",
      "subaccountId": "34d6259c-41bc-4f6b-8220-018ace187813",
      "subdomain": "afc-booster-test",
      "subscriptionGUID": "c74b720e-97b0-4c20-b2c4-a3591321c27b",
      "url": "https://afc-booster-test.dev.eu10-canary.afc.cloud.sap",
    },
  ],
}
`;

exports[`reg tests reg list and longlist filtered 5`] = `
{
  "subscriptions": [
    {
      "amount": 1,
      "appName": "afc-dev",
      "authProviderState": "SUBSCRIBED",
      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
      "changedOn": "Fri May 10 08:15:58 GMT 2024",
      "code": "standard",
      "commercialAppName": "afc-dev",
      "consumerTenantId": "5ecc7413-2b7e-414a-9496-ad4a61f6cccf",
      "createdOn": "Fri Mar 19 09:51:40 GMT 2021",
      "dependencies": [
        {
          "appId": "auditlog!b4",
          "appName": "auditlog",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
        },
        {
          "appId": "html5-apps-repo-uaa!b1129",
          "appName": "html5-apps-repo",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "sap-html5-apps-repo",
          "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
        },
        {
          "appId": "portal-cf-service!b119",
          "appName": "portal",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "ui5-flexibility-personalization!b1506",
              "appName": "ui5-flexibility-personalization",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "757b82dc-66c9-46ed-b724-9df99fa5a419!b119|ui5-flexibility-personalization!b1506",
            },
          ],
          "providerSubaccountID": "portalrel",
          "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
        },
        {
          "appId": "ans-business!b2187",
          "appName": "ans",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "destination-xsappname!b433",
              "appName": "destination",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [
                    {
                      "appId": "auditlog!b4",
                      "appName": "auditlog",
                      "authProviderState": "SUBSCRIBED",
                      "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                      "dependencies": [],
                      "xsappname": "da0519fb-67db-4809-85ac-a340b5b0b9a5!b137|auditlog!b4",
                    },
                  ],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clonebd6a3ec261bf48468c5684c414b14d7f!b433|connectivity!b137",
                },
                {
                  "appId": "auditlog!b4",
                  "appName": "auditlog",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "5001ed64-87a0-415c-8041-33406951606e!b433|auditlog!b4",
                },
                {
                  "appId": "connectivity!b137",
                  "appName": "connectivity",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
                  "xsappname": "clone845c0d6c34194265aeb6e95ebff4823d!b433|connectivity!b137",
                },
              ],
              "xsappname": "cloneea58daf306fc4cf09970b3fa428283f0!b2187|destination-xsappname!b433",
            },
            {
              "appId": "connectivity!b137",
              "appName": "connectivity",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
              "xsappname": "cloneaf154cb347e742b498fa659322de6ea4!b2187|connectivity!b137",
            },
          ],
          "providerSubaccountID": "88207f87-c41a-4056-bdad-527a630ccf2c",
          "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
        },
        {
          "appId": "businesslogging-sb-prod!b3598",
          "appName": "businesslogging-sb-prod",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "auditlog!b4",
              "appName": "auditlog",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [],
              "xsappname": "000cf9ab-4df6-4a40-b30e-3716896a28f9!b3598|auditlog!b4",
            },
          ],
          "providerSubaccountID": "3e057446-6320-4265-95e9-c8317e11208e",
          "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
        },
        {
          "appId": "destination-xsappname!b433",
          "appName": "destination",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433",
        },
        {
          "appId": "connectivity!b137",
          "appName": "connectivity",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [],
          "providerSubaccountID": "e4d9812a-447c-42cf-a52a-67c5a4a36317",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137",
        },
        {
          "appId": "ui5-flexibility-keyuser!b1506",
          "appName": "8df5f951-acc1-439b-8ba8-b01a3cd60e08",
          "authProviderState": "SUBSCRIBED",
          "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
          "dependencies": [
            {
              "appId": "cas-uaa-prod-eu10-canary!b11030",
              "appName": "cas-saas-registry-prod",
              "authProviderState": "SUBSCRIBED",
              "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
              "dependencies": [
                {
                  "appId": "destination-xsappname!b433",
                  "appName": "destination",
                  "authProviderState": "SUBSCRIBED",
                  "callbackState": "UPDATE_CALLBACK_SUCCEEDED",
                  "dependencies": [],
                  "xsappname": "clonebecdbd6b56cd4aac9e725c2dc563aca1!b11030|destination-xsappname!b433",
                },
              ],
              "providerSubaccountID": "3e3cb95e-04a7-43bf-a294-92cecbdf862c",
              "xsappname": "578334dc-1d38-45e3-893c-b176e5711992!b1506|cas-uaa-prod-eu10-canary!b11030",
            },
          ],
          "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
        },
      ],
      "globalAccountId": "011b4e7a-43b5-4f63-819a-9b1e46ab23b6",
      "internalSubscriptionId": "afc-dev!t5874_5ecc7413-2b7e-414a-9496-ad4a61f6cccf_afc-dev!t5874",
      "isConsumerTenantActive": true,
      "licenseType": "SAPDEV",
      "state": "SUBSCRIBED",
      "subaccountId": "5ecc7413-2b7e-414a-9496-ad4a61f6cccf",
      "subdomain": "skyfin-company",
      "subscriptionGUID": "8999d1fa-3a3e-bbf5-c21d-2db950822b8a",
      "url": "https://skyfin-company.dev-afc-sap.cfapps.sap.hana.ondemand.com",
    },
  ],
}
`;
